/ ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.html’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.md’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions_stripped.md’ / ‘Algebra/UGA Questions/sections/072_Fields and Galois Theory.md’

--- a/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
+++ b/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
@@ -51,6 +51,24 @@
 \tableofcontents
 \newpage
 
+\def\contradiction
+{
+\tikz[baseline, x=0.2em, y=0.2em, line width=0.04em]
+\draw (0,0) -- ({4*cos(45)},{4*sin(45)})
+    (-1,1) -- ({-1 + 4*cos(45)},{1 + 4*sin(45)})
+    (-1,3) -- ({-1 + 4*cos(315)},{3 + 4*sin(315)})
+    (0,4) -- ({0 + 4*cos(315)},{4 + 4*sin(315)});
+}
+
+\def\contradiction
+{
+\tikz[baseline, x=0.2em, y=0.2em, line width=0.04em]
+\draw (0,0) -- ({4*cos(45)},{4*sin(45)})
+    (-1,1) -- ({-1 + 4*cos(45)},{1 + 4*sin(45)})
+    (-1,3) -- ({-1 + 4*cos(315)},{3 + 4*sin(315)})
+    (0,4) -- ({0 + 4*cos(315)},{4 + 4*sin(315)});
+}
+
 \hypertarget{group-theory-general}{%
 \section{Group Theory: General}\label{group-theory-general}}
 
@@ -356,6 +374,15 @@ transposition and \(\sigma\) is a \(p{\hbox{-}}\)cycle.
 
 Let \(G\) be a nonabelian group of order \(p^3\) for \(p\) prime. Show
 that \(Z(G) = [G, G]\)
+
+\hypertarget{spring-2021-2-work}{%
+\subsection{\texorpdfstring{Spring 2021 \#2
+\(\work\)}{Spring 2021 \#2 \textbackslash work}}\label{spring-2021-2-work}}
+
+Let \(H {~\trianglelefteq~}G\) be a normal subgroup of a finite group
+\(G\), where the order of \(H\) is the smallest prime \(p\) dividing
+\({\left\lvert {G} \right\rvert}\). Prove that \(H\) is contained in the
+center of \(G\).
 
 \hypertarget{groups-sylow-theory}{%
 \section{Groups: Sylow Theory}\label{groups-sylow-theory}}
@@ -688,7 +715,7 @@ Concepts Used:
   \({\left\lvert {HK} \right\rvert} = {\left\lvert {H} \right\rvert} {\left\lvert {K} \right\rvert} / {\left\lvert {H\cap K} \right\rvert}\).
 \item
   Lagrange's Theorem:
-  \(H\leq G \implies {\left\lvert {H} \right\rvert} \divides {\left\lvert {G} \right\rvert}\)
+  \(H\leq G \implies {\left\lvert {H} \right\rvert} \mathrel{\Big|}{\left\lvert {G} \right\rvert}\)
 \end{itemize}
 
 \textbf{Solution}
@@ -778,7 +805,7 @@ Relevant Concepts:
   The \(pqr\) theorem.
 \item
   Sylow 3: \({\left\lvert {G} \right\rvert} = p^n m\) implies
-  \(n_p \divides m\) and \(n_p \cong 1 \pmod p\).
+  \(n_p \mathrel{\Big|}m\) and \(n_p \cong 1 \pmod p\).
 \item
   \textbf{Theorem}: If \(H, K \leq G\) and any of the following
   conditions hold, \(HK\) is a subgroup:
@@ -818,11 +845,11 @@ We have
 \begin{itemize}
 \tightlist
 \item
-  \(n_3 \divides 5\cdot 7, \quad n_3 \cong 1 \pmod 3 \implies n_3 \in \left\{{1, 5, 7, 35}\right\} \setminus \left\{{5, 35}\right\}\)
+  \(n_3 \mathrel{\Big|}5\cdot 7, \quad n_3 \cong 1 \pmod 3 \implies n_3 \in \left\{{1, 5, 7, 35}\right\} \setminus \left\{{5, 35}\right\}\)
 \item
-  \(n_5 \divides 3\cdot 7, \quad n_5 \cong 1 \pmod 5 \implies n_5 \in \left\{{1, 3, 7, 21}\right\}\setminus \left\{{3, 7}\right\}\)
+  \(n_5 \mathrel{\Big|}3\cdot 7, \quad n_5 \cong 1 \pmod 5 \implies n_5 \in \left\{{1, 3, 7, 21}\right\}\setminus \left\{{3, 7}\right\}\)
 \item
-  \(n_7 \divides 3\cdot 5, \quad n_7 \cong 1 \pmod 7 \implies n_7 \in \left\{{1, 3, 5, 15}\right\}\setminus\left\{{3, 5}\right\}\)
+  \(n_7 \mathrel{\Big|}3\cdot 5, \quad n_7 \cong 1 \pmod 7 \implies n_7 \in \left\{{1, 3, 5, 15}\right\}\setminus\left\{{3, 5}\right\}\)
 \end{itemize}
 
 Thus
@@ -928,6 +955,23 @@ G \cong P\times Q \times R \cong {\mathbb{Z}}_3 \times{\mathbb{Z}}_5 \times{\mat
 by the Chinese Remainder Theorem, which is cyclic.
 
 \end{solution}
+
+\hypertarget{spring-2021-3-work}{%
+\subsection{\texorpdfstring{Spring 2021 \#3
+\(\work\)}{Spring 2021 \#3 \textbackslash work}}\label{spring-2021-3-work}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Show that every group of order \(p^2\) with \(p\) prime is abelian.
+\item
+  State the 3 Sylow theorems.
+\item
+  Show that any group of order \(4225 = 5^2 13^2\) is abelian.
+\item
+  Write down one representative from each isomorphism class of abelian
+  groups of order 4225.
+\end{enumerate}
 
 \hypertarget{groups-group-actions}{%
 \section{Groups: Group Actions}\label{groups-group-actions}}
@@ -1209,7 +1253,7 @@ Concepts used:
 \item
   \(n_p \cong 1 \pmod p\)
 \item
-  \(n_p \divides m\).
+  \(n_p \mathrel{\Big|}m\).
 \end{itemize}
 
 \textbf{Solution}
@@ -1387,9 +1431,9 @@ Strategy: examine \({\left\lvert {G/Z(G)} \right\rvert}\) by cases.
   \begin{itemize}
   \tightlist
   \item
-    \(n_5 \divides 7^2,\quad n_5\cong 1\pmod 5 \implies n_5\in\left\{{1, 7, 49}\right\}\setminus\left\{{7, 49}\right\} = \left\{{1}\right\} \implies n_5 = 1\)
+    \(n_5 \mathrel{\Big|}7^2,\quad n_5\cong 1\pmod 5 \implies n_5\in\left\{{1, 7, 49}\right\}\setminus\left\{{7, 49}\right\} = \left\{{1}\right\} \implies n_5 = 1\)
   \item
-    \(n_7 \divides 5^2, \quad n_7 \cong 1 \pmod 7 \implies n_7 \in \left\{{1, 5, 25}\right\}\setminus\left\{{5, 25}\right\} =\left\{{1}\right\} \implies n_7 = 1\)
+    \(n_7 \mathrel{\Big|}5^2, \quad n_7 \cong 1 \pmod 7 \implies n_7 \in \left\{{1, 5, 25}\right\}\setminus\left\{{5, 25}\right\} =\left\{{1}\right\} \implies n_7 = 1\)
   \end{itemize}
 \item
   By recognition of direct products, \(G = S_5 \times S_7\)
@@ -2075,8 +2119,9 @@ in \(R\). Recall that in an integral domain \(R\), \(r \in R\) is called
 \(r\) have the form \(ru\) with \(u\) a unit in \(R\).
 
 We call a non-zero, non-unit \(r \in R\) \emph{prime} in \(R\) if
-\(r \divides ab \implies r \divides a\) or \(r \divides b\). Consider
-the ring \(R = \{a + b \sqrt{-5}{~\mathrel{\Big|}~}a, b \in Z\}\).
+\(r \mathrel{\Big|}ab \implies r \mathrel{\Big|}a\) or
+\(r \mathrel{\Big|}b\). Consider the ring
+\(R = \{a + b \sqrt{-5}{~\mathrel{\Big|}~}a, b \in Z\}\).
 
 \hypertarget{a-41}{%
 \subsubsection{a}\label{a-41}}
@@ -2475,7 +2520,7 @@ Concepts used:
   \({\left\lvert {E^{\times}} \right\rvert} = q^k-1\).
 \item
   Noting that \(\zeta \in E^{\times}\) we must have
-  \(n = o(\zeta) \divides {\left\lvert {E^{\times}} \right\rvert} = q^k-1\)
+  \(n = o(\zeta) \mathrel{\Big|}{\left\lvert {E^{\times}} \right\rvert} = q^k-1\)
   by Lagrange's theorem.
 \end{itemize}
 
@@ -2487,10 +2532,10 @@ Concepts used:
 \item
   Rephrasing (a), we have
   \begin{align*}
-  n \divides q^k-1 
+  n \mathrel{\Big|}q^k-1 
   &\iff q^k-1 \cong 0 \pmod n \\
   &\iff q^k \cong 1 \pmod n \\
-  &\iff m \coloneqq o(q) \divides k
+  &\iff m \coloneqq o(q) \mathrel{\Big|}k
   .\end{align*}
 \end{itemize}
 
@@ -2499,8 +2544,8 @@ Concepts used:
 
 \begin{itemize}
 \item
-  Since \(m\divides k \iff k = \ell m\), (\textbf{claim}) there is an
-  intermediate subfield \(M\) such that
+  Since \(m\mathrel{\Big|}k \iff k = \ell m\), (\textbf{claim}) there is
+  an intermediate subfield \(M\) such that
   \begin{align*}
   E \leq M \leq F \quad k = [F:E] = [F:M] [M:E] = \ell m
   ,\end{align*}
@@ -2704,7 +2749,7 @@ Since \(\rho\) is a ring morphism, we have
 &= 0 \in K \\
 &\iff q(x) \in \ker \rho \\
 &\iff q(x) \in \left\langle{\pi(x)}\right\rangle \\
-&\iff \pi(x) \divides q(x) = x^{p^d}-x \quad\text{"to contain is to divide"}
+&\iff \pi(x) \mathrel{\Big|}q(x) = x^{p^d}-x \quad\text{"to contain is to divide"}
 .\end{align*}
 
 \(\hfill\blacksquare\)
@@ -2721,9 +2766,9 @@ Some potentially useful facts:
   \({\mathbb{GF}}(p^n)\) is the splitting field of
   \(x^{p^n} - x \in {\mathbb{F}}_p[x]\).
 \item
-  \(x^{p^d} - x \divides x^{p^n} - x \iff d \divides n\)
+  \(x^{p^d} - x \mathrel{\Big|}x^{p^n} - x \iff d \mathrel{\Big|}n\)
 \item
-  \({\mathbb{GF}}(p^d) \leq {\mathbb{GF}}(p^n) \iff d\divides n\)
+  \({\mathbb{GF}}(p^d) \leq {\mathbb{GF}}(p^n) \iff d\mathrel{\Big|}n\)
 \item
   \(x^{p^n} - x = \prod f_i(x)\) over all irreducible monic \(f_i\) of
   degree \(d\) dividing \(n\).
@@ -2733,10 +2778,10 @@ Some potentially useful facts:
 Claim: \(\pi(x)\) divides \(x^{p^n}-x \iff \deg \pi\) divides \(n\).
 
 \(\implies\): Let \(L \cong {\mathbb{GF}}(p^n)\) be the splitting field
-of \(\phi_n(x) \coloneqq x^{p^n}-x\); then since \(\pi \divides \phi_n\)
-by assumption, \(\pi\) splits in \(L\). Let \(\alpha \in L\) be any root
-of \(\pi\); then there is a tower of extensions
-\({\mathbb{F}}_p \leq {\mathbb{F}}_p(\alpha) \leq L\).
+of \(\phi_n(x) \coloneqq x^{p^n}-x\); then since
+\(\pi \mathrel{\Big|}\phi_n\) by assumption, \(\pi\) splits in \(L\).
+Let \(\alpha \in L\) be any root of \(\pi\); then there is a tower of
+extensions \({\mathbb{F}}_p \leq {\mathbb{F}}_p(\alpha) \leq L\).
 
 Then \({\mathbb{F}}_p \leq {\mathbb{F}}_p(\alpha) \leq L\), and so
 \begin{align*}
@@ -2747,7 +2792,7 @@ n &= [L: {\mathbb{F}}_p] \\
 
 for some \(\ell \in {\mathbb{Z}}^{\geq 1}\), so \(d\) divides \(n\).
 
-\(\impliedby\): If \(d\divides n\), use the fact (claim) that
+\(\impliedby\): If \(d\mathrel{\Big|}n\), use the fact (claim) that
 \(x^{p^n} - x = \prod f_i(x)\) over all irreducible monic \(f_i\) of
 degree \(d\) dividing \(n\). So \(f = f_i\) for some \(i\).
 
@@ -3777,6 +3822,34 @@ Let \(L/K\) be a finite normal extension.
   \([L:K]\).
 \end{itemize}
 
+\hypertarget{spring-2021-4-work}{%
+\subsection{\texorpdfstring{Spring 2021 \#4
+\(\work\)}{Spring 2021 \#4 \textbackslash work}}\label{spring-2021-4-work}}
+
+Define
+\begin{align*}
+f(x) \coloneqq x^4 + 4x^2 + 64 \in {\mathbb{Q}}[x]
+.\end{align*}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Find the splitting field \(K\) of \(f\) over \({\mathbb{Q}}\).
+\item
+  Find the Galois group \(G\) of \(f\).
+\item
+  Exhibit explicitly the correspondence between subgroups of \(G\) and
+  intermediate fields between \({\mathbb{Q}}\) and \(K\).
+\end{enumerate}
+
+\hypertarget{spring-2021-7-work}{%
+\subsection{\texorpdfstring{Spring 2021 \#7
+\(\work\)}{Spring 2021 \#7 \textbackslash work}}\label{spring-2021-7-work}}
+
+Let \(p\) be a prime number and let \(F\) be a field of characteristic
+\(p\). Show that if \(a\in F\) is not a \(p\)th power in \(F\), then
+\(x^p-a \in F[x]\) is irreducible.
+
 \hypertarget{modules}{%
 \section{Modules}\label{modules}}
 
@@ -3840,11 +3913,11 @@ Identify \({\mathbb{Z}}{\hbox{-}}\)modules with abelian groups, then by
 nontrivial proper subgroups.
 
 By Cauchy's theorem, if \({\left\lvert {M/N} \right\rvert} = ab\) is a
-composite number, then \(a\divides ab \implies\) there is an element
-(and thus a subgroup) of order \(a\). In this case, \(M/N\) contains a
-nontrivial proper cyclic subgroup, so \(M/N\) is not simple. So
-\({\left\lvert {M/N} \right\rvert}\) can not be composite, and therefore
-must be prime.
+composite number, then \(a\mathrel{\Big|}ab \implies\) there is an
+element (and thus a subgroup) of order \(a\). In this case, \(M/N\)
+contains a nontrivial proper cyclic subgroup, so \(M/N\) is not simple.
+So \({\left\lvert {M/N} \right\rvert}\) can not be composite, and
+therefore must be prime.
 
 c
 
@@ -3885,7 +3958,7 @@ M = \{(w, x, y, z) \in {\mathbb{Z}}^4 {~\mathrel{\Big|}~}w + x + y + z \in 2{\ma
 and
 
 \begin{align*}
-N = \{(w, x, y, z) \in {\mathbb{Z}}^4 {~\mathrel{\Big|}~}4\divides (w - x),~ 4\divides (x - y),~ 4\divides ( y - z)\}
+N = \{(w, x, y, z) \in {\mathbb{Z}}^4 {~\mathrel{\Big|}~}4\mathrel{\Big|}(w - x),~ 4\mathrel{\Big|}(x - y),~ 4\mathrel{\Big|}( y - z)\}
 .\end{align*}
 
 \hypertarget{a-85}{%
@@ -4622,6 +4695,40 @@ Show that the eigenvalues of a Hermitian matrix \(A\) are real and that
 \(A = PDP^{-1}\) where \(P\) is an invertible matrix with orthogonal
 columns.
 
+\hypertarget{ring-theory}{%
+\section{Ring Theory}\label{ring-theory}}
+
+\hypertarget{spring-2021-5-work}{%
+\subsection{\texorpdfstring{Spring 2021 \#5
+\(\work\)}{Spring 2021 \#5 \textbackslash work}}\label{spring-2021-5-work}}
+
+Suppose that \(f(x) \in ({\mathbb{Z}}/n{\mathbb{Z}})[x]\) is a zero
+divisor. Show that there is a nonzero
+\(a\in {\mathbb{Z}}/n{\mathbb{Z}}\) with \(af(x) = 0\).
+
+\hypertarget{spring-2021-6}{%
+\subsection{Spring 2021 \#6}\label{spring-2021-6}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Carefully state the definition of \textbf{Noetherian} for a
+  commutative ring \(R\).
+\item
+  Let \(R\) be a subset of \({\mathbb{Z}}[x]\) consisting of all
+  polynomials
+  \begin{align*}
+  f(x) = a_ 0 + a_1 x + a_2 x^2 + \cdots + a_nx^n
+  \end{align*}
+  such that \(a_k\) is even for \(1\leq k \leq n\). Show that \(R\) is a
+  subring of \({\mathbb{Z}}[x]\).
+\item
+  Show that \(R\) is not Noetherian.
+\end{enumerate}
+
+\emph{Hint: consider the ideal generated by
+\(\left\{{ 2x^k {~\mathrel{\Big|}~}1\leq k \in {\mathbb{Z}}}\right\}\).}
+
 \hypertarget{linear-algebra-diagonalizability}{%
 \section{Linear Algebra:
 Diagonalizability}\label{linear-algebra-diagonalizability}}
@@ -4743,7 +4850,7 @@ q_A(x) \coloneqq\min_{A^n}(x^n) = \prod_{i=1}^m (x^n-\lambda_i) \in {\mathbb{F}}
 \end{align*}
 
 where we can note that \(q_A(A) = \min_{A^n}(A^n) = 0\), and so
-\(\min_A(x) \divides q_A(x)\) by minimality.
+\(\min_A(x) \mathrel{\Big|}q_A(x)\) by minimality.
 
 We now claim that \(q_A(x)\) has exactly \(n\cdot m\) distinct linear
 factors in
@@ -4771,9 +4878,9 @@ share a root. and that \(x^n-\lambda_i\) does not have multiple roots.
 
 But now since \(q_A(x)\) has exactly distinct linear factors in
 \(\mkern 1.5mu\overline{\mkern-1.5mu{\mathbb{F}}\mkern-1.5mu}\mkern 1.5mu[x]\)
-and \(\min_A(x) \divides q_A(x)\), \(\min_A(x) \in {\mathbb{F}}[x]\) can
-only have distinct linear factors, and \(A\) is thus diagonalizable over
-\({\mathbb{F}}\).
+and \(\min_A(x) \mathrel{\Big|}q_A(x)\),
+\(\min_A(x) \in {\mathbb{F}}[x]\) can only have distinct linear factors,
+and \(A\) is thus diagonalizable over \({\mathbb{F}}\).
 
 \(\hfill\blacksquare\)
 
@@ -5396,8 +5503,8 @@ Characterization of diagonalizability: \(T\) is diagonalizable over
     characteristic \(p>0\).
   \item
     The first case is true because \(\deg f' < \deg f\), and if
-    \(\gcd(f, f') = p\), then \(\deg p < \deg f\) and \(p\divides f\)
-    forces \(p=1\) since \(f\) is irreducible.
+    \(\gcd(f, f') = p\), then \(\deg p < \deg f\) and
+    \(p\mathrel{\Big|}f\) forces \(p=1\) since \(f\) is irreducible.
   \end{itemize}
 \item
   So \(\min_{T, F}\) splits into distinct linear factors
@@ -5921,6 +6028,39 @@ Show that there does not exist any vector \(v\in V\) such that
 \subsubsection{b}\label{b-105}}
 
 Give all of the possible Jordan canonical forms of \(T\).
+
+\hypertarget{spring-2021-1-work}{%
+\subsection{\texorpdfstring{Spring 2021 \#1
+\(\work\)}{Spring 2021 \#1 \textbackslash work}}\label{spring-2021-1-work}}
+
+Let m
+\begin{align*}
+A \coloneqq
+\begin{bmatrix}
+r & 1 & -1 \\
+-6 & -1 & 2 \\
+2 & 1 & 1
+\end{bmatrix}
+\in \operatorname{Mat}(3\times 3, {\mathbb{C}})
+.\end{align*}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Find the Jordan canonical form \(J\) of \(A\).
+\item
+  Find an invertible matrix \(P\) such that \(J = P ^{-1}A P\).
+\end{enumerate}
+
+\emph{(You should not need to compute \(P^{-1}\))}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  Write down the minimal polynomial of \(A\).
+\end{enumerate}
 
 
 \printbibliography[title=Bibliography]
