- ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.html’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.md’ - ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions_stripped.md’ / ‘Algebra/UGA Questions/sections/100_Linear Algebra.md’

--- a/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
+++ b/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
@@ -27,7 +27,7 @@
 
 \title{
 \textbf{
-    UGA Algebra Qualifying Exam Questions (Spring 2011 -- Spring 2020)
+    UGA Algebra Qualifying Exam Questions (Spring 2011 -- Spring 2021)
   }
   }
 
@@ -35,6 +35,7 @@
 
 
 
+\RenewEnviron{solution}{}% or \RenewEnviron{solution*}{\par}
 
 
 \begin{document}
@@ -971,6 +972,34 @@ by the Chinese Remainder Theorem, which is cyclic.
 \item
   Write down one representative from each isomorphism class of abelian
   groups of order 4225.
+\end{enumerate}
+
+\hypertarget{fall-2020-1-work}{%
+\subsection{\texorpdfstring{Fall 2020 \#1
+\(\work\)}{Fall 2020 \#1 \textbackslash work}}\label{fall-2020-1-work}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Using Sylow theory, show that every group of order \(2p\) where \(p\)
+  is prime is not simple.
+\item
+  Classify all groups of order \(2p\) and justify your answer. For the
+  nonabelian group(s), give a presentation by generators and relations.
+\end{enumerate}
+
+\hypertarget{fall-2020-2-work}{%
+\subsection{\texorpdfstring{Fall 2020 \#2
+\(\work\)}{Fall 2020 \#2 \textbackslash work}}\label{fall-2020-2-work}}
+
+Let \(G\) be a group of order 60 whose Sylow 3-subgroup is normal.
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that \(G\) is solvable.
+\item
+  Prove that the Sylow 5-subgroup is also normal.
 \end{enumerate}
 
 \hypertarget{groups-group-actions}{%
@@ -3850,6 +3879,34 @@ Let \(p\) be a prime number and let \(F\) be a field of characteristic
 \(p\). Show that if \(a\in F\) is not a \(p\)th power in \(F\), then
 \(x^p-a \in F[x]\) is irreducible.
 
+\hypertarget{fall-2020-3-work}{%
+\subsection{\texorpdfstring{Fall 2020 \#3
+\(\work\)}{Fall 2020 \#3 \textbackslash work}}\label{fall-2020-3-work}}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Define what it means for a finite extension of fields \(E\) over \(F\)
+  to be a \emph{Galois} extension.
+\item
+  Determine the Galois group of \(f(x) = x^3 - 7\) over
+  \({\mathbb{Q}}\), and justify your answer carefully.
+\item
+  Find all subfields of the splitting field of \(f(x)\) over
+  \({\mathbb{Q}}\).
+\end{enumerate}
+
+\hypertarget{fall-2020-4-work}{%
+\subsection{\texorpdfstring{Fall 2020 \#4
+\(\work\)}{Fall 2020 \#4 \textbackslash work}}\label{fall-2020-4-work}}
+
+Let \(K\) be a Galois extension of \(F\), and let
+\(F \subset E \subset K\) be inclusions of fields. Let
+\(G \coloneqq\operatorname{Gal}(K/F)\) and
+\(H \coloneqq\operatorname{Gal}(K/E)\), and suppose \(H\) contains
+\(N_G(P)\), where \(P\) is a Sylow \(p\)-subgroup of \(G\) for \(p\) a
+prime. Prove that \([E: F] \equiv 1 \pmod p\).
+
 \hypertarget{modules}{%
 \section{Modules}\label{modules}}
 
@@ -4081,6 +4138,30 @@ Prove that for every Noetherian module \(M\), any proper submodule
 
 Let \(A\) be an abelian group, and show \(A\) is a
 \({\mathbb{Z}}{\hbox{-}}\)module in a unique way.
+
+\hypertarget{fall-2020-6-work}{%
+\subsubsection{\texorpdfstring{Fall 2020 \#6
+\(\work\)}{Fall 2020 \#6 \textbackslash work}}\label{fall-2020-6-work}}
+
+Let \(R\) be a ring with \(1\) and let \(M\) be a left
+\(R{\hbox{-}}\)module. If \(I\) is a left ideal of \(R\), define
+\begin{align*}
+IM \coloneqq\left\{{ \sum_{i=1}^{N < \infty} a_i m_i {~\mathrel{\Big|}~}a_i \in I, m_i \in M, n\in {\mathbb{N}}}\right\}
+,\end{align*}
+i.e.~the set of finite sums of of elements of the form \(am\) where
+\(a\in I, m\in M\).
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Prove that \(IM \leq M\) is a submodule.
+\item
+  Let \(M, N\) be left \(R{\hbox{-}}\)modules, \(I\) a nilpotent left
+  ideal of \(R\), and \(f: M\to N\) an \(R{\hbox{-}}\)module morphism.
+  Prove that if the induced morphism
+  \(\mkern 1.5mu\overline{\mkern-1.5muf\mkern-1.5mu}\mkern 1.5mu: M/IM \to N/IN\)
+  is surjective, then \(f\) is surjective.
+\end{enumerate}
 
 \hypertarget{torsion-and-the-structure-theorem}{%
 \subsection{Torsion and the Structure
@@ -4694,6 +4775,37 @@ similar to \(A\).
 Show that the eigenvalues of a Hermitian matrix \(A\) are real and that
 \(A = PDP^{-1}\) where \(P\) is an invertible matrix with orthogonal
 columns.
+
+\hypertarget{fall-2020-7-work}{%
+\subsubsection{\texorpdfstring{Fall 2020 \#7
+\(\work\)}{Fall 2020 \#7 \textbackslash work}}\label{fall-2020-7-work}}
+
+Let \(A \in \operatorname{Mat}(n\times n, {\mathbb{R}})\) be arbitrary.
+Make \({\mathbb{R}}^n\) into an \({\mathbb{R}}[x]{\hbox{-}}\)module by
+letting \(f(x).\mathbf{v} \coloneqq f(A)(\mathbf{v})\) for
+\(f(\mathbf{v})\in {\mathbb{R}}[x]\) and
+\(\mathbf{v} \in {\mathbb{R}}^n\). Suppose that this induces the
+following direct sum decomposition:
+\begin{align*}
+{\mathbb{R}}^n \cong
+{ {\mathbb{R}}[x] \over \left\langle{ (x-1)^3 }\right\rangle 
+\oplus
+{ {\mathbb{R}}[x] \over \left\langle{ (x^2+1)^2 }\right\rangle 
+\oplus
+{ {\mathbb{R}}[x] \over \left\langle{ (x-1)(x^2-1)(x^2+1)^4 }\right\rangle 
+\oplus
+{ {\mathbb{R}}[x] \over \left\langle{ (x+2)(x^2+1)^2 }\right\rangle 
+.\end{align*}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Determine the elementary divisors and invariant factors of \(A\).
+\item
+  Determine the minimal polynomial of \(A\).
+\item
+  Determine the characteristic polynomial of \(A\).
+\end{enumerate}
 
 \hypertarget{ring-theory}{%
 \section{Ring Theory}\label{ring-theory}}
@@ -5514,6 +5626,18 @@ Characterization of diagonalizability: \(T\) is diagonalizable over
 
 \end{solution}
 
+\hypertarget{fall-2020-8-work}{%
+\subsection{\texorpdfstring{Fall 2020 \#8
+\(\work\)}{Fall 2020 \#8 \textbackslash work}}\label{fall-2020-8-work}}
+
+Let \(A\in \operatorname{Mat}(n\times n, {\mathbb{C}})\) such that the
+group generated by \(A\) under multiplication is finite. Show that
+\begin{align*}
+\operatorname{Tr}(A^{-1}) ={\overline{{\operatorname{Tr}(A) }}}
+,\end{align*}
+where \({\overline{{{\,\cdot\,}}}}\) denotes taking the complex
+conjugate and \(\operatorname{Tr}({\,\cdot\,})\) is the trace.
+
 \hypertarget{linear-algebra-canonical-forms}{%
 \section{Linear Algebra: Canonical
 Forms}\label{linear-algebra-canonical-forms}}
@@ -6060,6 +6184,31 @@ r & 1 & -1 \\
 \tightlist
 \item
   Write down the minimal polynomial of \(A\).
+\end{enumerate}
+
+\hypertarget{fall-2020-5-work}{%
+\subsection{\texorpdfstring{Fall 2020 \#5
+\(\work\)}{Fall 2020 \#5 \textbackslash work}}\label{fall-2020-5-work}}
+
+Consider the following matrix:
+\begin{align*}
+B \coloneqq
+\begin{bmatrix}
+1 & 3 & 3
+\\
+2 & 2 & 3
+\\
+-1 & -2 & -2
+\end{bmatrix}
+.\end{align*}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi}.}
+\item
+  Find the minimal polynomial of \(B\).
+\item
+  Find a \(3\times 3\) matrix \(J\) in Jordan canonical form such that
+  \(B = JPJ^{-1}\) where \(P\) is an invertible matrix.
 \end{enumerate}
 
 
