--- a/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
+++ b/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
@@ -4788,13 +4788,13 @@ letting \(f(x).\mathbf{v} \coloneqq f(A)(\mathbf{v})\) for
 following direct sum decomposition:
 \begin{align*}
 {\mathbb{R}}^n \cong
-{ {\mathbb{R}}[x] \over \left\langle{ (x-1)^3 }\right\rangle 
+{ {\mathbb{R}}[x] \over \left\langle{ (x-1)^3 }\right\rangle }
 \oplus
-{ {\mathbb{R}}[x] \over \left\langle{ (x^2+1)^2 }\right\rangle 
+{ {\mathbb{R}}[x] \over \left\langle{ (x^2+1)^2 }\right\rangle }
 \oplus
-{ {\mathbb{R}}[x] \over \left\langle{ (x-1)(x^2-1)(x^2+1)^4 }\right\rangle 
+{ {\mathbb{R}}[x] \over \left\langle{ (x-1)(x^2-1)(x^2+1)^4 }\right\rangle }
 \oplus
-{ {\mathbb{R}}[x] \over \left\langle{ (x+2)(x^2+1)^2 }\right\rangle 
+{ {\mathbb{R}}[x] \over \left\langle{ (x+2)(x^2+1)^2 }\right\rangle }
 .\end{align*}
 
 \begin{enumerate}
