/ ‘Real Analysis/UGA Questions/sections/Fall 2020.md’

--- a/Real Analysis/UGA Questions/sections/Fall 2020.md
+++ b/Real Analysis/UGA Questions/sections/Fall 2020.md
@@ -2,24 +2,25 @@
 
 
 
-## 1
+## Fall 2020 \# 1
 
 Show that if $x_n$ is a decreasing sequence of positive real numbers such that $\sum_{n=1}^\infty x_n$ converges, then
 $$
 \lim_{n\to\infty} n x_n = 0.
 $$
 
-## 2
+## Fall 2020 \# 2
 
 ### a
 
+a.
 Let $f: \RR \to \RR$. Prove that
 $$
 f(x) \leq \liminf_{y\to x} f(y)~ \text{for each}~ x\in {\RR} \iff \{ x\in {\RR} \mid f(x) > a \}~\text{is open for all}~ a\in {\RR}
 $$
 
-### b
 
+b.
 Recall that a function $f: {\RR} \to {\RR}$ is called *lower semi-continuous* iff it satisfies either condition in part (a) above.
 
 Prove that if $\mathcal{F}$ is an y family of lower semi-continuous functions, then 
@@ -30,16 +31,11 @@ is Borel measurable.
 
 > Note that $\mathcal{F}$ need not be a countable family.
 
-## 3
+## Fall 2020 \# 3
 
 Let $f$ be a non-negative Lebesgue measurable function on $[1, \infty)$.
 
-
-
-### a
-
-
-
+a.
 Prove that
 \[  
 1 \leq \qty{
@@ -50,8 +46,7 @@ Prove that
 \]
 for any $1\leq a < b <\infty$.
 
-### b
-
+b.
 Prove that if $f$ satisfies
 \[  
 \int_1^t f(x) \, dx \leq t^2 \log(t)
@@ -67,14 +62,14 @@ for all $t\in [1, \infty)$, then
 .\]
 
 
-## 4
+## Fall 2020 \# 4
 Prove that if $xf(x) \in L^1(\RR)$, then
 \[  
 F(y) \da \int f(x) \cos(yx)\,  dx
 \]
 defines a $C^1$ function.
 
-## 5
+## Fall 2020 \# 5
 Suppose $\phi\in L^1(\RR)$ with 
 \[  
 \int \phi(x) \, dx = \alpha
@@ -84,13 +79,13 @@ For each $\delta > 0$ and $f\in L^1(\RR)$, define
 A_\delta f(x) \da \int f(x-y) \delta^{-1} \phi\qty{\delta^{-1} y}\, dy
 .\]
 
-## a
+a.
 Prove that for all $\delta > 0$,
 \[  
 \norm{A_\delta f}_1 \leq \norm{\phi}_1 \norm{f}_1
 .\]
 
-### b
+b.
 Prove that 
 \[  
 A_\delta f \to \alpha f \text{ in } L^1(\RR) \qtext{as} \delta\to 0^+
