/ ‘Real Analysis/UGA Questions/UGA_Real_Analysis_Qual_Questions.md’ / ‘Real Analysis/UGA Questions/UGA_Real_Analysis_Qual_Questions.tex’ / ‘Real Analysis/UGA Questions/UGA_Real_Analysis_Qual_Questions_stripped.md’ + ‘Real Analysis/UGA Questions/figures’ / ‘Real Analysis/UGA Questions/sections/0021_Integration and L1.md’ - ‘Real Analysis/UGA Questions/sections/Fall 2020.md’

--- a/Real Analysis/UGA Questions/UGA_Real_Analysis_Qual_Questions.tex
+++ b/Real Analysis/UGA Questions/UGA_Real_Analysis_Qual_Questions.tex
@@ -4952,7 +4952,7 @@ Let \(f, g\) be Lebesgue integrable on \({\mathbb{R}}\) and let
 \begin{figure}
 \centering
 \includegraphics{figures/image_2021-04-24-21-27-21.png}
-\caption{image\_2021-04-24-21-27-21}
+\caption{Shifting density}
 \end{figure}
 
 \begin{itemize}
