- ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.html’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.md’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions_stripped.md’ / ‘Algebra/UGA Questions/data.yaml’ - ‘Algebra/UGA Questions/tex_tempfiles/UGA_Algebra_Qual_Questions.pdf’ + ‘Algebra/UGA Questions/tex_tempfiles/’

--- a/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
+++ b/Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex
@@ -35,6 +35,7 @@
 
 
 
+\RenewEnviron{solution}{}% or \RenewEnviron{solution*}{\par}
 
 
 \begin{document}
@@ -4825,7 +4826,7 @@ X \ar[u, hook] \ar[r, "f"] & N
 
 Equivalently,
 \begin{align*}
-\mathop{\mathrm{Hom}}_{\mathsf{Set}}(X, {\operatorname{Forget}}(N)) \xrightarrow{\sim} \mathop{\mathrm{Hom}}_{{\mathsf{R}{\hbox{-}}\mathsf{Mod}}}(M, N)
+\mathop{\mathrm{Hom}}_{\mathsf{Set}}(X, \mathop{\mathrm{Forget}}(N)) \xrightarrow{\sim} \mathop{\mathrm{Hom}}_{{\mathsf{R}{\hbox{-}}\mathsf{Mod}}}(M, N)
 .\end{align*}
 
 \end{proof}
@@ -5480,9 +5481,9 @@ Show that the following statements are equivalent about a polynomial
 \subsection{\texorpdfstring{Fall 2015 \#8
 \(\work\)}{Fall 2015 \#8 \textbackslash work}}\label{fall-2015-8-work}}
 
-Let \(V\) be a vector space over a field \(F\) and \(V^\vee\) its dual.
-A \emph{symmetric bilinear form} \(({-}, {-})\) on \(V\) is a map
-\(V\times V\to F\) satisfying
+Let \(V\) be a vector space over a field \(F\) and \(V {}^{ \check{} }\)
+its dual. A \emph{symmetric bilinear form} \(({-}, {-})\) on \(V\) is a
+map \(V\times V\to F\) satisfying
 \begin{align*}
 (av_1 + b v_2, w) = a(v_1, w) + b(v_2, w) {\quad \operatorname{and} \quad} (v_1, v_2) = (v_2, v_1)
 \end{align*}
@@ -5504,7 +5505,7 @@ W^{\perp} \coloneqq\left\{{v\in V {~\mathrel{\Big|}~}(v, w) = 0 \text{ for all }
 \item
   Define an injective linear map
   \begin{align*}
-  \psi: Y^{\perp}/X^{\perp} \hookrightarrow(X/Y)^\vee
+  \psi: Y^{\perp}/X^{\perp} \hookrightarrow(X/Y) {}^{ \check{} }
   \end{align*}
   which is an isomorphism if \(V\) is finite dimensional.
 \end{enumerate}
@@ -5702,19 +5703,19 @@ Gram matrix \(M = (e_i \cdot e_j )\) has integer entries.
 
 Define the dual of \(\Lambda\) to be
 \begin{align*}
-\Lambda ^\vee\coloneqq\{v \in V {~\mathrel{\Big|}~}v \cdot x \in {\mathbb{Z}}\text{ for all } x \in \Lambda
+\Lambda  {}^{ \check{} }\coloneqq\{v \in V {~\mathrel{\Big|}~}v \cdot x \in {\mathbb{Z}}\text{ for all } x \in \Lambda
 \}
 .\end{align*}
 
 \begin{enumerate}
 \def\labelenumi{\alph{enumi}.}
 \item
-  Show that \(\Lambda \subset \Lambda ^\vee\).
+  Show that \(\Lambda \subset \Lambda {}^{ \check{} }\).
 \item
   Prove that \(\det M \neq 0\) and that the rows of \(M^{-1}\) span
-  \(\Lambda^\vee\).
+  \(\Lambda {}^{ \check{} }\).
 \item
-  Prove that \(\det M = |\Lambda^\vee/\Lambda|\).
+  Prove that \(\det M = |\Lambda {}^{ \check{} }/\Lambda|\).
 \end{enumerate}
 
 \todo[inline]{Todo, missing part (c).}
@@ -5743,7 +5744,7 @@ Define the dual of \(\Lambda\) to be
   since this is a sum of products of integers (since
   \({\left\langle {\mathbf{e}_i},~{\mathbf{e}_j} \right\rangle} \in {\mathbb{Z}}\)
   for each \(i, j\) pair by assumption) so
-  \(\mathbf{v} \in \Lambda^\vee\) by definition.
+  \(\mathbf{v} \in \Lambda {}^{ \check{} }\) by definition.
 \end{itemize}
 
 \end{proof}
@@ -5819,8 +5820,8 @@ Let \(A = [\mathbf{e}_1^t, \cdots, \mathbf{e}_n^t]\) be the matrix with
 
 \begin{claim}
 
-The rows of \(A^{-1}\) span \(\Lambda^\vee\). Equivalently, the columns
-of \(A^{-t}\) span \(\Lambda^\vee\).
+The rows of \(A^{-1}\) span \(\Lambda {}^{ \check{} }\). Equivalently,
+the columns of \(A^{-t}\) span \(\Lambda {}^{ \check{} }\).
 
 \end{claim}
 
@@ -5834,18 +5835,18 @@ of \(A^{-t}\) span \(\Lambda^\vee\).
   \(A^{-1}, A^t, A^{-t} \in \operatorname{GL}(n, {\mathbb{Z}})\) as
   well.
   \begin{align*}
-  \mathbf{v} \in \Lambda^\vee
+  \mathbf{v} \in \Lambda {}^{ \check{} }
   &\implies {\left\langle {\mathbf{e}_i},~{\mathbf{v}} \right\rangle} = z_i \in {\mathbb{Z}}\quad \forall i \\
   &\implies A^t \mathbf{v} = \mathbf{z} \coloneqq[z_1, \cdots, z_n] \in {\mathbb{Z}}^n \\
   &\implies \mathbf{v} = A^{-t} \mathbf{z} \coloneqq B\mathbf{z} \in \operatorname{im}B \\
   &\implies \mathbf{v} \in \operatorname{im}B \\
-  &\implies \Lambda^\vee\subseteq \operatorname{im}B
+  &\implies \Lambda {}^{ \check{} }\subseteq \operatorname{im}B
   ,\end{align*}
   and
   \begin{align*}
   B^t A = (A^{-t})^t A = A^{-1}A = I \\
   \implies \mathbf{b}_i \cdot \mathbf{e}_j = \delta_{ij} \in {\mathbb{Z}}\\
-  \implies \operatorname{im}B \subseteq {\operatorname{span}}~ \Lambda^\vee
+  \implies \operatorname{im}B \subseteq {\operatorname{span}}~ \Lambda {}^{ \check{} }
   .\end{align*}
 \end{itemize}
 
